# RuleDiscordBot

./: .bazelrc  .gitignore  .travis.yml  BUILD.bazel  Dockerfile  Jenkinsfile  KARL_condensed  README.md  WORKSPACE  adminSnowflakes  build.gradle  build.gradle.kts  compose.yaml  docker-compose.yml  gradle.properties  myrulebot.trace.db  rulebot.mv.db  settings.gradle  settings.gradle.kts  start.sh  travis-reference.yml
.circleci/: config.yml
.platform/confighooks/: hooks
android/: build.gradle.kts  settings.gradle.kts
android/app/: BUILD  build.gradle.kts
build-logic/: settings.gradle.kts
build-logic/kotlin-build/: build.gradle.kts
build-logic/lifecycle/: build.gradle.kts
buildSrc/: build.gradle.kts
destiny-rule/: settings.gradle.kts
destiny_rule/: BUILD
discord4k/: BUILD  build.gradle  build.gradle.kts  settings.gradle.kts
models/: BUILD  settings.gradle.kts
mtg-rule/: build.gradle.kts  settings.gradle.kts
mtg_rule/: BUILD
myrulebot/: BUILD  build.gradle  build.gradle.kts  myrulebot.mv.db  rulebot.mv.db  rulebot.trace.db  settings.gradle.kts
psycho_rule/: BUILD  build.gradle.kts  settings.gradle.kts
raid_rule/: BUILD.bazel
repositories/: build.gradle.kts
rulebot/: BUILD  build.gradle  build.gradle.kts  rulebot.mv.db  settings.gradle.kts
rulebotanalytics/: build.gradle
test_utils/: BUILD  settings.gradle.kts
tools/: kotlin.bzl
utils/: BUILD  settings.gradle.kts
wellness-models/: settings.gradle.kts
wellness-rule/: build.gradle.kts
wellness_models/: BUILD  build.gradle.kts
wellness_rule/: BUILD  settings.gradle.kts
(+264 files in other folders)
